# micro_chromium

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
chromium/: BUILD.bazel  build_defs.bzl  rust_cxx_bridge.bzl
chromium/base/: BUILD.bazel  check.h  clang_profiling_buildflags.h  cpu.cc  location.cc  location.h  location_unittest.cc  logging.h  notimplemented.h  notreached.h  sequence_checker.h  values.cc  values.h  values_unittest.cc
chromium/base/allocator/partition_allocator/: BUILD.bazel
chromium/base/allocator/partition_allocator/src/partition_alloc/: BUILD.bazel  buildflag_header.bzl
chromium/base/allocator/partition_allocator/src/partition_alloc/pointers/: instance_tracer.cc
chromium/base/apple/: BUILD.bazel  foundation_util.h  foundation_util.mm  mach_logging.h
chromium/base/containers/: BUILD.bazel  span_unittest.cc
chromium/base/debug/: BUILD.bazel  debugger_posix.cc  debugging_buildflags.h
chromium/base/files/: BUILD.bazel  file_path.cc  file_path.h  file_path_unittest.cc  scoped_file_linux.cc
chromium/base/functional/: BUILD.bazel  bind_internal.h  bind_unittest.cc  function_ref.h  function_ref_unittest.cc
chromium/base/hash/: BUILD.bazel
chromium/base/json/: json_common.h  json_parser.cc  json_reader.cc
chromium/base/macros/: BUILD.bazel
chromium/base/memory/: BUILD.bazel  protected_memory_win.cc  raw_ptr.h  safe_ref_unittest.cc  weak_ptr.cc
chromium/base/metrics/: BUILD.bazel  histogram_macros.h
chromium/base/numerics/: BUILD.bazel
chromium/base/posix/: BUILD.bazel
chromium/base/process/: BUILD.bazel  process_handle.h  process_handle_win.cc
chromium/base/strings/: BUILD.bazel  stringprintf.h  sys_string_conversions_apple.mm
chromium/base/synchronization/: BUILD.bazel  lock.cc  lock_impl_posix.cc  lock_impl_win.cc
chromium/base/test/: BUILD.bazel  copy_only_int.h  gtest_util.h  move_only_int.h
chromium/base/threading/: BUILD.bazel  platform_thread.h  platform_thread_apple.mm  platform_thread_handle.h  platform_thread_handle_posix.cc  platform_thread_handle_win.cc  platform_thread_posix.cc  platform_thread_win.cc  thread_collision_warner.cc  thread_collision_warner.h
chromium/base/time/: BUILD.bazel  time.h  time_exploded_posix.cc  time_win.cc
chromium/base/timer/: BUILD.bazel
chromium/base/types/: BUILD.bazel  strong_alias.h  strong_alias_unittest.cc
chromium/base/win/: BUILD.bazel  access_token_unittest.cc  atl_throw.cc  scoped_handle.cc  scoped_handle.h  security_util.cc  sid.cc  sid.h  sid_unittest.cc  win_util.cc  win_util.h
chromium/bazel/: buildflag_header.bzl  configurable_value.bzl  gen_buildflag_header.bzl
chromium/bazel/config/: BUILD.bazel
chromium/testing/: BUILD.bazel  gtest_mac.h  gtest_mac.mm  gtest_mac_unittest.mm
chromium/testing/gmock/: BUILD.bazel
chromium/testing/gtest/: BUILD.bazel
chromium/testing/gtest/include/gtest/: gtest.h
patches/: add-buildflags.patch  add-check-and-logging-shim.patch  add-check-shim.patch  add-gtest-util.patch  add-logging-shim.patch  add-missing-header-for-ostream-operators.patch  add-missing-headers.patch  add-noop-histogram-macros  add-noop-raw-ptr.patch  add-notreached.patch  add-support-for-msvc-stl.patch  add-third-party-shim.patch  add-win-util.patch  disable-raw-ptr-exclusion-annotation.patch  disable-scoped-handle-verifier.patch  do-not-strip-source-file-location.patch  fix-abseil-cpp-include.patch  fix-boringssl-include.patch  fix-googletest-include.patch  no-pickle.patch  noop-sequence-checker.patch  remove-chromium-specific-stuff.patch  remove-failure-handling.patch  remove-feature-switch.patch  remove-icu.patch  remove-out-of-memory-handling.patch  remove-rand-util.patch  remove-scoped-blocking-call.patch  remove-tracing.patch  remove-unused-include.patch  replace-raw_ptr-with-raw-pointer.patch  series  split-platform-thread.patch  split-process-handle.patch  use-cxx-json-reader.patch
tools/: set_quilt_vars.sh  sync.sh
