load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test")

chromium_cc_library(
    name = "at_exit",
    srcs = ["at_exit.cc"],
    hdrs = ["at_exit.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:base_export",
        "//chromium/base:check_op",
        "//chromium/base:dcheck_is_on",
        "//chromium/base:notreached",
        "//chromium/base:thread_annotations",
        "//chromium/base/containers:stack",
        "//chromium/base/functional:bind",
        "//chromium/base/functional:callback",
        "//chromium/base/memory:raw_ptr",
        "//chromium/base/synchronization:lock",
    ],
)

chromium_cc_library(
    name = "atomic_ref_count",
    hdrs = ["atomic_ref_count.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "base_export",
    hdrs = ["base_export.h"],
    visibility = ["//chromium:__subpackages__"],
)

chromium_cc_library(
    name = "bits",
    hdrs = ["bits.h"],
    visibility = ["//visibility:public"],
    deps = [":check"],
)

chromium_cc_library(
    name = "bit_cast",
    hdrs = ["bit_cast.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "check",
    hdrs = ["check.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/base/macros:uniquify",
        "@abseil-cpp//absl/log:absl_check",
    ],
)

chromium_cc_library(
    name = "check_op",
    hdrs = ["check_op.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["@abseil-cpp//absl/log:absl_check"],
)

chromium_cc_library(
    name = "clang_profiling_buildflags",
    hdrs = ["clang_profiling_buildflags.h"],
    visibility = ["//visibility:public"],
    deps = ["//chromium/build:buildflag"],
)

chromium_cc_library(
    name = "command_line",
    srcs = ["command_line.cc"],
    hdrs = ["command_line.h"],
    linkopts = select({
        "@platforms//os:windows": ["shell32.lib"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        ":check_op",
        ":compiler_specific",
        ":logging",
        ":notreached",
        "//chromium/base/containers:contains",
        "//chromium/base/containers:span",
        "//chromium/base/debug:debugging_buildflags",
        "//chromium/base/files:file_path",
        "//chromium/base/numerics:safe_math",
        "//chromium/base/strings",
        "//chromium/base/strings:strcat",
        "//chromium/base/strings:string_split",
        "//chromium/base/strings:string_tokenizer",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "compiler_specific",
    hdrs = ["compiler_specific.h"],
    visibility = ["//visibility:public"],
    deps = ["//chromium/build:build_config"],
)

chromium_cc_library(
    name = "cpu",
    srcs = ["cpu.cc"],
    hdrs = ["cpu.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        "//chromium/base/containers:span",
        "//chromium/base/containers:span_writer",
        "//chromium/base/memory:protected_memory",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "dcheck_is_on",
    hdrs = ["dcheck_is_on.h"],
    visibility = ["//visibility:public"],
    deps = ["//chromium/base/debug:debugging_buildflags"],
)

chromium_cc_library(
    name = "environment",
    srcs = ["environment.cc"],
    hdrs = ["environment.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        "//chromium/base/containers:heap_array",
        "//chromium/base/memory:ptr_util",
        "//chromium/base/strings",
        "//chromium/base/strings:cstring_view",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "format_macros",
    hdrs = ["format_macros.h"],
    visibility = ["//visibility:public"],
    deps = ["//chromium/build:build_config"],
)

chromium_cc_library(
    name = "fuzzing_buildflags",
    hdrs = ["fuzzing_buildflags.h"],
    visibility = ["//visibility:public"],
    deps = ["//chromium/build:buildflag"],
)

chromium_cc_library(
    name = "gtest_prod_util",
    hdrs = ["gtest_prod_util.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        "//chromium/testing:gtest_prod",
    ],
)

chromium_cc_library(
    name = "immediate_crash",
    hdrs = ["immediate_crash.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":fuzzing_buildflags",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "location",
    srcs = ["location.cc"],
    hdrs = ["location.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        ":compiler_specific",
        "//chromium/base/memory:raw_ptr_exclusion",
        "//chromium/base/strings:string_number_conversions",
        "//chromium/base/strings:stringprintf",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "logging",
    hdrs = ["logging.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        ":check",
        "//chromium/build:build_config",
        "@abseil-cpp//absl/log:absl_log",
    ],
)

chromium_cc_library(
    name = "no_destructor",
    hdrs = ["no_destructor.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "notimplemented",
    hdrs = ["notimplemented.h"],
    visibility = ["//visibility:public"],
    deps = ["@abseil-cpp//absl/log:absl_log"],
)

chromium_cc_library(
    name = "notreached",
    hdrs = ["notreached.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base/macros:uniquify",
        "@abseil-cpp//absl/log:absl_log",
    ],
)

chromium_cc_library(
    name = "scoped_clear_last_error",
    srcs = select({
        "@platforms//os:windows": ["scoped_clear_last_error_win.cc"],
        "//conditions:default": [],
    }),
    hdrs = ["scoped_clear_last_error.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "scoped_generic",
    hdrs = ["scoped_generic.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":check",
        ":compiler_specific",
        "//chromium/base/memory:raw_ptr",
    ],
)

chromium_cc_library(
    name = "sequence_checker",
    hdrs = ["sequence_checker.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":check",
        ":thread_annotations",
    ],
)

chromium_cc_library(
    name = "thread_annotations",
    hdrs = ["thread_annotations.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":dcheck_is_on",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "values",
    srcs = [
        "json/json_common.h",
        "json/json_reader.cc",
        "json/json_writer.cc",
        "json/string_escape.cc",
        "value_iterators.cc",
        "values.cc",
    ],
    hdrs = [
        "json/json_reader.h",
        "json/json_writer.h",
        "json/string_escape.h",
        "value_iterators.h",
        "values.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        ":bit_cast",
        ":check",
        ":check_op",
        ":compiler_specific",
        ":gtest_prod_util",
        ":logging",
        ":notreached",
        "//chromium/base/containers:checked_iterators",
        "//chromium/base/containers:flat_map",
        "//chromium/base/containers:map_util",
        "//chromium/base/containers:span",
        "//chromium/base/memory:ptr_util",
        "//chromium/base/memory:raw_ptr",
        "//chromium/base/numerics:safe_math",
        "//chromium/base/strings",
        "//chromium/base/strings:strcat",
        "//chromium/base/strings:string_number_conversions",
        "//chromium/base/strings:string_view_rust",
        "//chromium/base/strings:stringprintf",
        "//chromium/base/strings:to_string",
        "//chromium/base/strings:utf_string_conversion_utils",
        "//chromium/base/third_party/icu",
        "//chromium/base/types:expected",
        "//chromium/base/types:pass_key",
        "//chromium/base/types:to_address",
        "//chromium/build:build_config",
        "//chromium/third_party/rust/serde_json_lenient/v0_2/wrapper",
    ],
)

chromium_cc_library(
    name = "version",
    srcs = ["version.cc"],
    hdrs = ["version.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":base_export",
        ":check_op",
        "//chromium/base/strings",
        "//chromium/base/strings:string_number_conversions",
        "//chromium/base/strings:string_split",
    ],
)

chromium_cc_test(
    name = "at_exit_unittest",
    size = "small",
    srcs = ["at_exit_unittest.cc"],
    deps = [
        ":at_exit",
        "//chromium/base/functional:bind",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "bit_cast_unittest",
    size = "small",
    srcs = ["bit_cast_unittest.cc"],
    deps = [
        ":bit_cast",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "command_line_unittest",
    size = "small",
    srcs = ["command_line_unittest.cc"],
    deps = [
        ":command_line",
        "//chromium/base/debug:debugging_buildflags",
        "//chromium/base/files:file_path",
        "//chromium/base/strings",
        "//chromium/base/strings:strcat",
        "//chromium/base/test:gtest_util",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "cpu_unittest",
    size = "small",
    srcs = ["cpu_unittest.cc"],
    deps = [
        ":cpu",
        ":logging",
        "//chromium/base/containers:contains",
        "//chromium/base/memory:protected_memory_buildflags",
        "//chromium/base/strings",
        "//chromium/base/test:gtest_util",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "environment_unittest",
    size = "small",
    srcs = ["environment_unittest.cc"],
    deps = [
        ":environment",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
        "//chromium/testing:platform_test",
    ],
)

chromium_cc_test(
    name = "json/json_writer_unittest",
    size = "small",
    srcs = ["json/json_writer_unittest.cc"],
    deps = [
        ":values",
        "//chromium/base/containers:span",
        "//chromium/base/strings:stringprintf",
        "//chromium/base/test:gmock_expected_support",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ] + select({
        "@platforms//os:windows": ["//chromium/base/strings"],
        "//conditions:default": [],
    }),
)

chromium_cc_test(
    name = "json/string_escape_unittest",
    size = "small",
    srcs = ["json/string_escape_unittest.cc"],
    deps = [
        ":values",
        "//chromium/base/strings",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "location_unittest",
    size = "small",
    srcs = ["location_unittest.cc"],
    deps = [
        ":location",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "scoped_clear_last_error_unittest",
    size = "small",
    srcs = ["scoped_clear_last_error_unittest.cc"],
    deps = [
        ":logging",
        ":scoped_clear_last_error",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "scoped_generic_unittest",
    size = "small",
    srcs = ["scoped_generic_unittest.cc"],
    deps = [
        ":scoped_generic",
        "//chromium/base/containers:contains",
        "//chromium/base/memory:raw_ptr",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "thread_annotations_unittest",
    size = "small",
    srcs = ["thread_annotations_unittest.cc"],
    deps = [
        ":thread_annotations",
        "//chromium/base/memory:raw_ref",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "value_iterators_unittest",
    size = "small",
    srcs = ["value_iterators_unittest.cc"],
    deps = [
        ":values",
        "//chromium/base/memory:ptr_util",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "values_unittest",
    size = "small",
    srcs = ["values_unittest.cc"],
    deps = [
        ":bits",
        ":values",
        "//chromium/base/containers:adapters",
        "//chromium/base/containers:contains",
        "//chromium/base/strings",
        "//chromium/base/test:gtest_util",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "version_unittest",
    size = "small",
    srcs = ["version_unittest.cc"],
    deps = [
        ":version",
        "//chromium/testing:gtest",
    ],
)
