load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_or_objc_library", "chromium_objc_library", "chromium_objc_test")

chromium_cc_library(
    name = "gtest",
    testonly = True,
    hdrs = [
        "gmock/include/gmock/gmock.h",
        "gtest/include/gtest/gtest.h",
    ],
    visibility = ["//chromium:__subpackages__"],
    deps = [
        "//chromium/third_party/googletest:gtest_for_library",
        "//chromium/third_party/googletest:gtest_main",
    ],
)

chromium_objc_library(
    name = "gtest_mac",
    testonly = True,
    srcs = ["gtest_mac.mm"],
    hdrs = ["gtest_mac.h"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":gtest",
        "//chromium/third_party/googletest:gtest_for_library",
    ],
)

chromium_cc_library(
    name = "gtest_prod",
    hdrs = ["gtest/include/gtest/gtest_prod.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/third_party/googletest:gtest_prod"],
)

chromium_cc_or_objc_library(
    name = "platform_test",
    testonly = True,
    srcs = select({
        "@platforms//os:macos": ["platform_test_mac.mm"],
        "@platforms//os:ios": ["platform_test_mac.mm"],
        "//conditions:default": [],
    }),
    hdrs = ["platform_test.h"],
    visibility = ["//visibility:public"],
    deps = ["//chromium/third_party/googletest:gtest_for_library"],
)

chromium_objc_test(
    name = "gtest_mac_unittest",
    size = "small",
    srcs = ["gtest_mac_unittest.mm"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":gtest",
        ":gtest_mac",
        "//chromium/third_party/googletest:gtest",
    ],
)
