load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test", "chromium_objc_library", "chromium_objc_test")

chromium_objc_library(
    name = "bridging",
    hdrs = ["bridging.h"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":scoped_cftyperef",
        "//chromium/base:base_export",
        "//chromium/base:check",
        "//chromium/base/types:always_false",
        "//chromium/build:build_config",
    ],
)

chromium_objc_library(
    name = "foundation_util",
    srcs = [
        "bundle_locations.mm",
        "foundation_util.mm",
    ],
    hdrs = [
        "bundle_locations.h",
        "foundation_util.h",
    ],
    linkopts = [
        "-Wl,-framework,CoreFoundation",
        "-Wl,-framework,Foundation",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":bridging",
        ":scoped_cftyperef",
        "//chromium/base:base_export",
        "//chromium/base:check",
        "//chromium/base:compiler_specific",
        "//chromium/base:logging",
        "//chromium/base:no_destructor",
        "//chromium/base/containers:adapters",
        "//chromium/base/containers:span",
        "//chromium/base/files:file_path",
        "//chromium/base/numerics:safe_math",
        "//chromium/base/strings",
        "//chromium/base/strings:sys_string_conversions",
        "//chromium/build:build_config",
    ],
)

chromium_objc_library(
    name = "mach_logging",
    hdrs = ["mach_logging.h"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base/strings:stringprintf",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:absl_log",
    ],
)

chromium_cc_library(
    name = "scoped_cftyperef",
    hdrs = ["scoped_cftyperef.h"],
    linkopts = select({
        "@platforms//os:macos": ["-Wl,-framework,CoreFoundation"],
        "@platforms//os:ios": ["-Wl,-framework,CoreFoundation"],
        "//conditions:default": [],
    }),
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [":scoped_typeref"],
)

chromium_cc_library(
    name = "scoped_mach_port",
    srcs = ["scoped_mach_port.cc"],
    hdrs = ["scoped_mach_port.h"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":mach_logging",
        "//chromium/base:base_export",
        "//chromium/base:scoped_generic",
    ],
)

chromium_cc_library(
    name = "scoped_typeref",
    hdrs = ["scoped_typeref.h"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:check_op",
        "//chromium/base/memory:scoped_policy",
    ],
)

chromium_objc_test(
    name = "foundation_util_unittest",
    size = "small",
    srcs = ["foundation_util_unittest.mm"],
    linkopts = [
        "-Wl,-framework,CoreFoundation",
        "-Wl,-framework,Foundation",
    ],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":foundation_util",
        ":scoped_cftyperef",
        "//chromium/base:format_macros",
        "//chromium/base/files:file_path",
        "//chromium/base/strings:stringprintf",
        "//chromium/build:build_config",
        "//chromium/testing:gtest_mac",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "scoped_cftyperef_unittest",
    size = "small",
    srcs = ["scoped_cftyperef_unittest.cc"],
    linkopts = ["-Wl,-framework,CoreFoundation"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:ios": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":scoped_cftyperef",
        "//chromium/base/memory:scoped_policy",
        "//chromium/testing/gtest",
    ],
)
